force-app/main/default/objects/OrgA__c/OrgA__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>OrgA</label>
</CustomObject>