force-app/main/default/objects/OrgA__c/fields/Account_OrgC_RecordTypeId__c.field-meta.xml
<CustomField>
    <fullName>Account_OrgC_RecordTypeId__c</fullName>
    <label>Account_OrgC_RecordTypeId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>