force-app/main/default/objects/OrgA__c/fields/Opportunity_OrgC_RecordTypeId__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_OrgC_RecordTypeId__c</fullName>
    <label>Opportunity_OrgC_RecordTypeId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>