force-app/main/default/objects/OrgA__c/fields/PriceBookEntryId__c.field-meta.xml
<CustomField>
    <fullName>PriceBookEntryId__c</fullName>
    <label>PriceBookEntryId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>